turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:55: error: unclosed character literal
    	rule(1)(0)(1) = 'NOTURN';
                               ^Turmite:58: error: unclosed character literal
    	rule(1)(1)(1) = 'NOTURN';
                               ^